--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-plus:9.0.0'
     compile 'com.google.android.gms:play-services-auth:9.0.0'
+
+    compile 'com.google.firebase:firebase-database:9.0.0'
 }
