--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.2.1'
 
     compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.google.firebase:firebase-core:10.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
